<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="@dimen/card_corner">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_scan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="2dp"
                    card_view:cardCornerRadius="0dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="4dp" >

                        <ImageView
                            android:id="@+id/website_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/wifi"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/wifi_icon"
                            tools:ignore="RtlHardcoded" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan"
                            android:id="@+id/scan"
                            android:layout_toRightOf="@+id/website_icon"
                            android:layout_toEndOf="@+id/website_icon" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gallery"
                            android:id="@+id/gallery"
                            android:layout_below="@+id/scan"
                            android:layout_toRightOf="@+id/website_icon"
                            android:layout_toEndOf="@+id/website_icon" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_tutorial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="2dp"
                    card_view:cardCornerRadius="0dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:background="@color/accent_card">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:background="@color/accent_card">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/tutorial"
                            android:id="@+id/tutorial"
                            android:layout_gravity="center_horizontal" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</FrameLayout>