<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_rate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_initial_background"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_cardbank"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/rate_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_action_heart"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_rate"
                android:textSize="17sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/rate_icon"
                android:layout_toEndOf="@+id/rate_icon" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_nerd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_initial_background"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_cardbank"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/nerd_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/nerd"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/nerd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_nerd"
                android:textSize="17sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/nerd_icon"
                android:layout_toEndOf="@+id/nerd_icon" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/imgPirate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/darth"
        android:src="@drawable/darth"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="50dp" />
</LinearLayout>